Fixed a spacing issue in items

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .ResultLabel {
